Updated docs using Scribe.
