# public/docs/openapi.yaml
@@ -152,7 +152,59 @@ paths:
       operationId: allocateSeats
       description: 'Allocate seats for the event'
       parameters: []
-      responses: {  }
+      responses:
+        200:
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    message: 'Seats allocated successfully'
+                    status: success
+                    code: 200
+                    eventAndSeatData:
+                      event: 'Bethel Robel'
+                      venue: 'Bogisich PLC'
+                      day: '2003-05-09'
+                      startTime: '09:16:20'
+                      endTime: '16:10:39'
+                      allocatedSeats: 3
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                        example: 'Seats allocated successfully'
+                      status:
+                        type: string
+                        example: success
+                      code:
+                        type: integer
+                        example: 200
+                      eventAndSeatData:
+                        type: object
+                        properties:
+                          event:
+                            type: string
+                            example: 'Bethel Robel'
+                          venue:
+                            type: string
+                            example: 'Bogisich PLC'
+                          day:
+                            type: string
+                            example: '2003-05-09'
+                          startTime:
+                            type: string
+                            example: '09:16:20'
+                          endTime:
+                            type: string
+                            example: '16:10:39'
+                          allocatedSeats:
+                            type: integer
+                            example: 3
       tags:
         - 'Allocate Seats'
       requestBody:
